--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@vercel/analytics": "^1.5.0",
     "@vueuse/head": "^2.0.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
