--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@nuxtjs/robots": "^5.5.1",
+    "@nuxtjs/sitemap": "^7.4.3",
     "@vercel/analytics": "^1.5.0",
     "@vueuse/head": "^2.0.0",
     "axios": "^1.6.8",
