[feature] add sitemap

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
+    "generate:sitemap": "node scripts/generate-sitemap-pages.js",
+    "build": "npm run generate:sitemap && nuxt build",
     "start": "nuxt start",
-    "dev": "nuxt dev",
+    "dev": "npm run generate:sitemap && nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
