--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "postbuild": "mkdir -p .output/public/sitemaps && curl -o .output/public/sitemaps/sitemap-foods-1.xml https://api.juanutrisyon.info/sitemaps/sitemap-foods-1.xml && curl -o .output/public/sitemaps/sitemap-foods-2.xml https://api.juanutrisyon.info/sitemaps/sitemap-foods-2.xml && curl -o .output/public/sitemaps/sitemap-foods-3.xml https://api.juanutrisyon.info/sitemaps/sitemap-foods-3.xml && curl -o .output/public/sitemaps/sitemap-static.xml https://api.juanutrisyon.info/sitemaps/sitemap-static.xml"
+    "prebuild": "mkdir -p public/sitemaps && curl -o public/sitemaps/sitemap-foods-1.xml https://api.juanutrisyon.info/sitemaps/sitemap-foods-1.xml && curl -o public/sitemaps/sitemap-foods-2.xml https://api.juanutrisyon.info/sitemaps/sitemap-foods-2.xml && curl -o public/sitemaps/sitemap-foods-3.xml https://api.juanutrisyon.info/sitemaps/sitemap-foods-3.xml && curl -o public/sitemaps/sitemap-static.xml https://api.juanutrisyon.info/sitemaps/sitemap-static.xml",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
