--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "prebuild": "node ./scripts/copy-sitemaps.js"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
