[fix] final sitemaps fix: manual copy and paste from server

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "prebuild": "node ./scripts/copy-sitemaps.js"
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
