--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nuxt": "^3.17.1",
     "p-retry": "^6.2.1",
     "pinia": "^2.1.7",
+    "vite-plugin-vuetify": "^2.1.2",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.1",
     "vue-gtag": "^3.3.0",
